--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -64,8 +64,7 @@ cards:
     fullWidth: true
     abstract: >
       Number of cases (people who have had at least one positive COVID-19 test result), by specimen date. 
-      Data for the period ending 5 days before the date when the website was last updated with data for the selected area, 
-      highlighted in grey, are incomplete. 
+      Data for the last 5 days, highlighted in grey, are incomplete. 
 
     download:
       - newCasesBySpecimenDate
@@ -236,8 +235,7 @@ cards:
     fullWidth: true
     abstract: >
       Number of cases (people who have had at least one positive COVID-19 test result), by specimen date. 
-      Data for the period ending 5 days before the date when the website was last updated with data for the selected area, 
-      highlighted in grey, are incomplete. 
+      Data for the last 5 days, highlighted in grey, are incomplete. 
 
     download:
       - newCasesBySpecimenDate
@@ -413,7 +411,7 @@ cards:
       Positive rapid lateral flow test results can be confirmed with PCR tests taken within 72 hours. If the PCR test results are negative, these are not reported as cases. 
       The test types shown are lab-based polymerase chain reaction (PCR), rapid lateral flow test (LFD) with positive PCR (this means the result has been verified with a 
       positive PCR result taken within 3 days) and LFD only (no PCR taken within 3 days). People tested positive more than once are only counted once, on the date of their 
-      first positive test. Data for the period ending 5 days before the date when the website was last updated with data for the selected area are incomplete. Some LFD results 
+      first positive test. Data for the last 5 days are incomplete. Some LFD results 
       may change or be removed as more PCR results are reported. 
 
     download:
