--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -496,8 +496,180 @@ cards:
         filename: cardMetadata/testing/cardPCRPositivity.md
 
 ##############################################################################################################################
-##############################################################################################################################
+
 # {{ StartDevOnlyBlock }}
+  # Only shown for and within England
+
+  - heading: Virus tests conducted [combined DEV]
+    cardType: chart
+    locationAware:
+      included: 
+
+        areaType:
+          - utla
+          - ltla
+          - region
+
+        areaName:
+          - England
+
+    fullWidth: true
+    abstract: >
+      Number of confirmed positive, negative or void COVID-19 virus test results (PCR and LFD tests), 
+      and rolling 7-day average. This is a count of test results and may include more than one test per person. 
+      Data are shown by the date the sample was taken from the person being tested.
+
+    download:
+      - newVirusTestsBySpecimenDate
+      - cumVirusTestsBySpecimenDate
+      - newPCRTestsBySpecimenDate
+      - cumPCRTestsBySpecimenDate
+      - newLFDTests
+      - cumLFDTests
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - Total
+        - By test type
+
+    Total:
+      
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Virus tests conducted
+              value: newVirusTestsBySpecimenDate
+              tooltip: Daily number of virus tests conducted
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            - label: Virus tests conducted (7-day average)
+              value: newVirusTestsBySpecimenDate
+              tooltip: 7 day rolling average of the daily number of virus tests conducted on {date}
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
+                #window: 7
+                #clipEnd: 3
+          
+        - heading: Cumulative
+          tabType: chart
+          barType: normal
+          fields:
+            - label: Virus tests conducted
+              value: cumVirusTestsBySpecimenDate
+              tooltip: Cumulative number of virus tests conducted
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: Daily virus tests conducted
+              value: newVirusTestsBySpecimenDate
+              type: numeric
+              tooltip: Daily number of virus conducted up to {date}
+
+            - label: Total virus tests conducted
+              value: cumVirusTestsBySpecimenDate
+              type: numeric
+              tooltip: Total number of virus tests conducted up to {date}
+           
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardVirusTestsBySpecimenDate.md
+
+    By test type:
+      
+      - heading: Daily
+        tabType: chart
+        barType: stack
+        fields:
+          - label: Lab-based virus tests conducted
+            value: newPCRTestsBySpecimenDate
+            tooltip: Daily number of lab-based virus tests conducted
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+          - label: Rapid lateral flow tests conducted
+            value: newLFDTests
+            tooltip: Daily number of lateral flow tests conducted
+            type: bar
+            colour: 3
+            rollingAverage: false
+
+          
+      - heading: Cumulative
+        tabType: chart
+        barType: stack
+        fields:
+          - label: Lab-based virus tests conducted
+            value: cumPCRTestsBySpecimenDate
+            tooltip: Cumulative number of lab-based virus tests conducted
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+          - label: Rapid lateral flow tests conducted
+            value: cumLFDTests
+            tooltip: Cumulative number of rapid lateral flow tests conducted
+            type: bar
+            colour: 3
+            rollingAverage: false
+
+          
+      - heading: Daily data
+        tabType: table
+        fields:
+          - label: Date
+            value: date
+            type: date
+            tooltip: Date
+
+          - label: Lab-based virus tests conducted
+            value: newPCRTestsBySpecimenDate
+            type: numeric
+            tooltip: Daily number of lab-based virus conducted up to {date}
+
+          - label: Daily lateral flow tests conducted
+            value: newLFDTests
+            type: numeric
+            tooltip: Daily number of lateral flow tests conducted up to {date}
+
+      - heading: Cumulative data
+        tabType: table
+        fields:
+          - label: Date
+            value: date
+            type: date
+            tooltip: Date
+
+          - label: Lab-based virus tests conducted
+            value: cumPCRTestsBySpecimenDate
+            type: numeric
+            tooltip: Total number of lab-based virus tests conducted up to {date}
+
+          - label: Rapid lateral flow tests conducted
+            value: cumLFDTests
+            type: numeric
+            tooltip: Total number of lateral flow tests conducted up to {date}
+          
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/testing/cardPCRTestsBySpecimenDate.md
 
 # Only shown for and within England
 
