--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -517,7 +517,7 @@ cards:
     abstract: >
       Number of confirmed positive, negative or void COVID-19 virus test results (PCR and LFD tests), 
       and rolling 7-day average. This is a count of test results and may include more than one test per person. 
-      Data are shown by the date the sample was taken from the person being tested. Data for the last 5 days, highlighted in grey, are incomplete.
+      Data are shown by the date the sample was taken from the person being tested. Data for the most recent days, highlighted in grey, are incomplete.
 
     download:
       - newVirusTestsBySpecimenDate
@@ -793,7 +793,7 @@ cards:
     abstract: >
       Number of confirmed positive, negative or void COVID-19 lab-based virus test results (excludes LFD and antibody tests), 
       and rolling 7-day average. This is a count of test results and may include more than one test per person.  
-      Data are shown by the date the sample was taken from the person being tested. Data for the last 5 days, highlighted in grey, are incomplete.
+      Data are shown by the date the sample was taken from the person being tested. Data for the most recent days, highlighted in grey, are incomplete.
      
     download:
       - newPCRTestsBySpecimenDate
