adds params to allow downloads to work
For the card: People who have received 1st dose vaccinations, by report date

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1091,6 +1091,10 @@ cards:
         - heading: Daily
           tabType: chart
           barType: normal
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
 
           fields:
             - label: daily
@@ -1152,6 +1156,10 @@ cards:
         - heading: Daily
           tabType: chart
           barType: normal
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
 
           fields:
             - label: daily
@@ -1213,6 +1221,10 @@ cards:
         - heading: Daily
           tabType: chart
           barType: normal
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
 
           fields:
             - label: daily
