fixes cardType to fix download url on vaccinations card
card: People who have received vaccinations, by report date

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -1058,7 +1058,7 @@ cards:
 # nations only
 
   - heading: People who have received vaccinations, by report date
-    cardType: multiAreaStatic
+    cardType: chart
     locationAware:
       included:
         areaType:
