--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1001,7 +1001,7 @@ cards:
 
   - heading: Recent 7-day case rates by specimen date
     cardType: chart
-    fullWidth: true
+    fullWidth: false
     abstract: >
       Rate of cases (people who have had at least one positive COVID-19 test result) 
       per 100,000 people in the rolling 7-day period ending on the dates shown.  
@@ -1055,7 +1055,7 @@ cards:
 
   - heading: Percentage change in recent 7-day case rates by specimen date
     cardType: chart
-    fullWidth: true
+    fullWidth: false
     chartMode: percentage
     abstract: >
       Percentage change in rate of cases (people who have had at least one positive COVID-19 test result) per 100,000 people in the rolling 7-day period ending on the dates shown. 
